--- a/l2-guidelines.ipynb
+++ b/l2-guidelines.ipynb
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Providing clear and specific instructions to a model will guide it towards the desired output, reducing the chances of irrelevant or incorrect responses, and longer prompts can provide more clarity and context for more detailed and relevant outputs.\n"
+      "It is important to provide clear and specific instructions to guide a model towards the desired output and reduce the chances of receiving irrelevant or incorrect responses, with longer prompts often providing more clarity and context for the model.\n"
      ]
     }
    ],
@@ -175,15 +175,15 @@
       "    },\n",
       "    {\n",
       "        \"book_id\": 2,\n",
-      "        \"title\": \"Echoes of the Past\",\n",
-      "        \"author\": \"Nathan Black\",\n",
+      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"author\": \"Lucas Blackwood\",\n",
       "        \"genre\": \"Mystery\"\n",
       "    },\n",
       "    {\n",
       "        \"book_id\": 3,\n",
-      "        \"title\": \"Whispers in the Wind\",\n",
+      "        \"title\": \"Echoes of the Past\",\n",
       "        \"author\": \"Samantha Greene\",\n",
-      "        \"genre\": \"Romance\"\n",
+      "        \"genre\": \"Historical Fiction\"\n",
       "    }\n",
       "]\n"
      ]
@@ -223,10 +223,10 @@
       "Completion for Text 1:\n",
       "Step 1 - Get some water boiling.\n",
       "Step 2 - Grab a cup and put a tea bag in it.\n",
-      "Step 3 - Pour the hot water over the tea bag.\n",
-      "Step 4 - Let the tea steep for a few minutes.\n",
-      "Step 5 - Remove the tea bag.\n",
-      "Step 6 - Add sugar or milk to taste.\n",
+      "Step 3 - Once the water is hot enough, pour it over the tea bag.\n",
+      "Step 4 - Let it sit for a bit so the tea can steep.\n",
+      "Step 5 - After a few minutes, take out the tea bag.\n",
+      "Step 6 - Add some sugar or milk to taste.\n",
       "Step 7 - Enjoy your delicious cup of tea.\n"
      ]
     }
@@ -332,7 +332,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<grandparent>: The tallest trees weather the strongest storms; the brightest stars shine in the darkest nights; the strongest hearts are forged in the hottest fires.\n"
+      "<grandparent>: The tallest trees withstand the strongest winds; the brightest stars shine through the darkest nights; the strongest hearts endure the toughest trials.\n"
      ]
     }
    ],
@@ -444,15 +444,15 @@
      "text": [
       "\n",
       "Completion for prompt 2:\n",
-      "Summary: Jack and Jill, two siblings, go on a quest to fetch water from a hilltop well but encounter misfortune along the way.\n",
+      "Summary: Jack and Jill, siblings, go on a quest to fetch water from a hilltop well, but encounter misfortune along the way.\n",
       "\n",
-      "Translation: Jack et Jill, deux frères et sœurs, partent en quête d'eau d'un puits au sommet d'une colline mais rencontrent des malheurs en chemin.\n",
+      "Translation: Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\n",
       "\n",
       "Names: Jack, Jill\n",
       "\n",
       "Output JSON: \n",
       "{\n",
-      "  \"french_summary\": \"Jack et Jill, deux frères et sœurs, partent en quête d'eau d'un puits au sommet d'une colline mais rencontrent des malheurs en chemin.\",\n",
+      "  \"french_summary\": \"Jack et Jill, frère et sœur, partent en quête d'eau d'un puits au sommet d'une colline, mais rencontrent des malheurs en chemin.\",\n",
       "  \"num_names\": 2\n",
       "}\n"
      ]
@@ -554,22 +554,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The total cost for the first year of operations is the sum of the land cost, solar panel cost, and maintenance cost.\n",
+      "\n",
+      "1. Land cost: $100 / square foot\n",
+      "2. Solar panel cost: $250 / square foot\n",
+      "3. Maintenance cost: $100,000 + $10 / square foot\n",
+      "\n",
       "Let x be the size of the installation in square feet.\n",
       "\n",
-      "Costs:\n",
-      "1. Land cost: $100 * x\n",
-      "2. Solar panel cost: $250 * x\n",
-      "3. Maintenance cost: $100,000 + $10 * x\n",
+      "Total cost = Land cost + Solar panel cost + Maintenance cost\n",
+      "Total cost = $100x + $250x + $100,000 + $10x\n",
+      "Total cost = $360x + $100,000\n",
       "\n",
-      "Total cost: $100 * x + $250 * x + $100,000 + $10 * x = $360 * x + $100,000\n",
-      "```\n",
-      "Is the student's solution the same as actual solution just calculated:\n",
+      "Is the student's solution the same as the actual solution just calculated:\n",
       "```\n",
       "No\n",
       "```\n",
       "Student grade:\n",
       "```\n",
-      "incorrect\n"
+      "Incorrect\n",
+      "```\n"
      ]
     }
    ],
@@ -657,9 +661,9 @@
      "text": [
       "The AeroGlide UltraSlim Smart Toothbrush by Boie is a high-tech toothbrush designed to provide a superior cleaning experience. It features ultra-soft bristles that are gentle on the gums and teeth, while still effectively removing plaque and debris. The toothbrush also has a slim design that makes it easy to maneuver and reach all areas of the mouth.\n",
       "\n",
-      "One of the standout features of the AeroGlide UltraSlim Smart Toothbrush is its smart technology. It connects to a mobile app via Bluetooth, allowing users to track their brushing habits and receive personalized recommendations for improving their oral hygiene routine. The app also provides real-time feedback on brushing technique, ensuring that users are getting the most out of their brushing sessions.\n",
+      "One of the standout features of the AeroGlide UltraSlim Smart Toothbrush is its smart technology. It connects to a mobile app via Bluetooth, allowing users to track their brushing habits and receive personalized recommendations for improving their oral hygiene routine. The app also provides real-time feedback on brushing technique, ensuring a thorough and effective clean every time.\n",
       "\n",
-      "Overall, the AeroGlide UltraSlim Smart Toothbrush is a sleek and innovative option for those looking to upgrade their oral care routine. Its combination of gentle bristles, slim design, and smart technology make it a standout choice in the world of electric toothbrushes.\n"
+      "Overall, the AeroGlide UltraSlim Smart Toothbrush by Boie is a cutting-edge dental tool that combines advanced technology with high-quality materials to deliver a superior brushing experience.\n"
      ]
     }
    ],
