--- a/RAG.ipynb
+++ b/RAG.ipynb
@@ -276,6 +276,101 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import argparse\n",
+    "from dataclasses import dataclass\n",
+    "\n",
+    "from langchain_openai import ChatOpenAI\n",
+    "from langchain.prompts import ChatPromptTemplate\n",
+    "\n",
+    "PROMPT_TEMPLATE = \"\"\"\n",
+    "Answer the question based only on the following context:\n",
+    "\n",
+    "{context}\n",
+    "\n",
+    "---\n",
+    "\n",
+    "Answer the question based on the above context: {question}\n",
+    "\"\"\"\n",
+    "\n",
+    "db = Chroma(persist_directory=CHROMA_PATH, embedding_function=OpenAIEmbeddings())\n",
+    "model = ChatOpenAI(model_name=\"gpt-3.5-turbo\", openai_api_key=os.getenv(\"OPENAI_API_KEY\"), temperature=1.5)\n",
+    "\n",
+    "def RAG(query_text: str, db: Chroma, model: ChatOpenAI):\n",
+    "    # Create CLI.\n",
+    "    query_text = query_text\n",
+    "\n",
+    "    # Search the DB.\n",
+    "    results = db.similarity_search_with_relevance_scores(query_text, k=3)\n",
+    "    if len(results) == 0 or results[0][1] < 0.7:\n",
+    "        print(f\"Unable to find matching results.\")\n",
+    "        return\n",
+    "\n",
+    "    context_text = \"\\n\\n---\\n\\n\".join([doc.page_content for doc, _score in results])\n",
+    "    prompt_template = ChatPromptTemplate.from_template(PROMPT_TEMPLATE)\n",
+    "    prompt = prompt_template.format(context=context_text, question=query_text)\n",
+    "    print(prompt)\n",
+    "\n",
+    "    \n",
+    "    response_text = model.invoke(prompt)\n",
+    "\n",
+    "    sources = [doc.metadata.get(\"source\", None) for doc, _score in results]\n",
+    "    formatted_response = f\"Response: {response_text}\\nSources: {sources}\"\n",
+    "    print(formatted_response)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Human: \n",
+      "Answer the question based only on the following context:\n",
+      "\n",
+      "When the procession came opposite to Alice, they all stopped and looked\n",
+      "at her, and the Queen said severely “Who is this?” She said it to the\n",
+      "Knave of Hearts, who only bowed and smiled in reply.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "“How do you like the Queen?” said the Cat in a low voice.\n",
+      "\n",
+      "“Not at all,” said Alice: “she’s so extremely—” Just then she noticed\n",
+      "that the Queen was close behind her, listening: so she went on,\n",
+      "“—likely to win, that it’s hardly worth while finishing the game.”\n",
+      "\n",
+      "The Queen smiled and passed on.\n",
+      "\n",
+      "---\n",
+      "\n",
+      "Alice began to feel very uneasy: to be sure, she had not as yet had any\n",
+      "dispute with the Queen, but she knew that it might happen any minute,\n",
+      "“and then,” thought she, “what would become of me? They’re dreadfully\n",
+      "fond of beheading people here; the great wonder is, that there’s any\n",
+      "one left alive!”\n",
+      "\n",
+      "---\n",
+      "\n",
+      "Answer the question based on the above context: How does Aice meet the Queen?\n",
+      "\n",
+      "Response: content=\"Alice first meets the Queen when the procession stops and looks at her. The Queen then asks the Knave of hearts who Alice is, and Alice replies that the Queen is so likely to win that it's hardly worth finishing the game. The Queen smiles and passes on, without any confrontation between them.\"\n",
+      "Sources: ['data\\\\alice_in_wonderland.md', 'data\\\\alice_in_wonderland.md', 'data\\\\alice_in_wonderland.md']\n"
+     ]
+    }
+   ],
+   "source": [
+    "RAG(\"How does Aice meet the Queen?\",db, model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
