--- a/langchain_tutorial.ipynb
+++ b/langchain_tutorial.ipynb
@@ -664,7 +664,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# See COHERE API"
+   ]
   }
  ],
  "metadata": {
